ui/src/App.css
.App {
    left: 50%;
    position: absolute;
    top: 40%;
    -moz-transform: translateX(-50%) translateY(-50%);
    -webkit-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);
    width: 500px;
}

.password-input {
    max-width: 66%;
}

.page {
    justify-content: space-between;
    max-width: 500px;
    min-height: 60%;
    text-align: center;
}

.button {
    margin: 1rem !important;
}

.authorize-summary {
    inline-size: 26rem;
    margin: 0 auto;
    max-width: 22.5rem !important;
    overflow-wrap: break-word;
    text-align: center;
}

.recovery-phrase-info {
    min-width: 23rem;
    text-align: left;
    margin-left: 2rem;
    margin-right: 2rem;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

.recovery-phrase-info>p {
    margin: 0;
    color: #FFBC2C;
}

.recovery-phrase-warning {
    margin: 1rem;
    min-width: 26rem;
    text-align: center;
}

.recovery-phrase {
    background-color: lightblue;
    border-radius: 0.5rem;
    border: 1px solid white;
    margin: 1.75rem;
    min-width: 10rem;
    padding: 0.5rem;
    text-align: center;
}

.recovery-phrase::selection {
    color: white;
    background-color: darkblue;
}

.recovery-phrase-header {
    margin-bottom: 0.5rem !important;
}

.input.ui.password {
    border-radius: 5px;
    height: 40px;
    width: 65%;
    margin: 0.5rem;
}

.input.ui.password.tall {
    border-radius: 5px;
    height: 40px;
    width: 65%;
    margin: 0.5rem;
    margin-top:2rem;
}

.input.ui.password.tall.wide {
    border-radius: 5px;
    height: 40px;
    width: 80%;
    margin: 0.5rem;
    margin-top:2rem;
}

.button.ui.first {
    background-color: #0894ec;
    color:#FFFFFF;
    border-radius: 5px;
    height: 40px;
    width: 65%;
}
 
.button.ui.first.thin {
    background-color: #0894ec;
    color:#FFFFFF;
    border-radius: 5px;
    height: 40px;
    width: 29%;
}

.button.ui.cancel {
    background-color: #FFFFFF;
    border-color: #0894ec;
    color: #0894ec;
    border-radius: 5px;
    height: 40px;
    width: 29%;
    border-style: solid;
    border-width: thin;
}

.button.ui.cancel:hover {
    border:none;
}

.button.ui.first.wide {
    background-color: #0894ec;
    color:#FFFFFF;
    border-radius: 5px;
    height: 40px;
    width: 80%;
}

.button.ui.two {
    background-color: #FFFFFF;
    color:black;
    border-radius: 15px;
}
  
.button.ui.danger {
    background-color: red;
    color:white;
    border-radius: 15px;
}
  
.secondary-anchor {
    color:black
}
  
.textarea.ui.scaled {
    width:300px;
    height:180px;
    text-align: center;
}
  
.mainlogo {
    width:7rem;
    height:7rem;
}
  
.mainheadline {
    font-weight: 900;
}
  
.subtext {
    color:gray;
    margin-top:-10px;
}

.mainlogocontainer {
    padding-bottom: 30px;
    padding-top: 45px;
}

.mainlogocontainer.viewPhrase {
    padding-bottom: 10px;
}

.mainlogocontainer.login {
    padding-top: 80px;
}

.firstbuttoncontainer {
    padding-top: 2rem;
}

.headercontainer {
    padding-top: 6rem;
}

.tightHeaderContainer {
    margin:1rem;
    padding-top: 5rem;
}

.recoverHeaderContainer {
    margin:1rem;
    padding-top: 8rem;
}

.tallHeaderContainer {
    margin:1rem;
    padding-top: 7.5rem;
}

.recoveryPhraseContainer {
    display:flex;
    flex-wrap:wrap;
    justify-content:center;
    background-color:#eef0f2;
    border-radius: 5px;
    padding-top: 1rem;
    margin-top: 1rem;
    padding-bottom: 2rem;
    margin-bottom:1rem;
    margin-left:3.2rem;
    margin-right:3.2rem;
    height:8.5rem;
}

.exportRecoveryPhraseContainer {
    padding-top: 1rem;
    padding-bottom: 1rem;
    max-height: 14rem;
    display:flex;
    flex-wrap:wrap;
    justify-content:center;
    background-color:#eef0f2;
    border-radius: 5px;
    margin-top: 1rem;
    margin-bottom:1rem;
    margin-left:3.2rem;
    margin-right:3.2rem;
}

.numberedWordSelection {
    margin-left:-1rem;
}

.recoveryPhraseWord {
    flex-basis:20%;
    margin:0.4rem;
}

.wordListContainer {
    border-radius: 5px;
    display:flex;
    flex-wrap:wrap;
    justify-content:center;
    border-color: #eef0f2;
    height:12rem;
    margin-left:1rem;
    margin-right:1rem;
    border-style: solid;
    align-content: flex-start;
    padding-top:0.7rem;
}

.buttonListContainer {
    border-radius: 5px;
    display:flex;
    flex-wrap:wrap;
    justify-content:space-evenly;
    height:10rem;
    margin:1rem;
}

.button.ui.buttonlist {
    flex-basis:10%;
    margin:0.2rem !important;
    background-color: #FFFFFF;
    border: 2px solid #eef0f2;
    border-radius: 5px;
    color:gray;
    max-height: 3rem;
    min-width: 7rem;
}

.mediumSubText {
    color: gray;
}

.headercontainerFat {
    margin: 4rem;
}

.ui.fluid.dropdown.compressed {
    width: 65%;
    display: inline-block;
}


.ui.form.field.thin {
    flex-basis:30%;
    background-color: #FFFFFF;
    border: 2px solid #eef0f2;
    border-radius: 5px;
    color:gray;
    max-height: 3rem;
    width:6rem;
}

.ui.form.adjusted {
    border-radius: 5px;
    display:flex;
    flex-wrap:wrap;
    justify-content:space-evenly;
    max-height:32rem;
    margin-top:1rem;
    padding-left:3.5rem;
    padding-right:3rem;
}

.hideImage {
    width: 5.5rem;
}

.hideImageRecover {
    width: 6.5rem;
}

.bottomButtonContainer {
    margin-bottom: 3rem;
}

.learnAboutManta {
    margin-bottom:-6rem;
}

.learnAboutMantaSmall {
    margin-bottom:-5rem;
    padding-top:1rem;
}

.supportedNetworksContainer {
    display:flex;
    flex-wrap:wrap;
    justify-content:center;
    padding-top:0.5rem;
    margin-bottom: 1rem;
}

.supportedNetworksChild {
    border-color: #0894ec;
    border-style: solid;
    border-radius: 5px;
    border-width: thin;
    width: 65%;
}

.supportedNetworksHeader {
    margin-top: 0.8rem;
    margin-bottom: 0.5rem;
}

.networkText {
    font-weight: 400;
}

.networkTable {
    padding-left:4.2rem;
}

.miniDolphinLogo {
    width:2rem;
}

.miniCalamariLogo {
    width:2rem;
}

.miniMantaLogo {
    width:1.8rem;
}

.finishLogoContainer {
    padding-top:6rem;
}

.transactionContainer {
    display:flex;
    flex-wrap:wrap;
    justify-content:center;
}

.transactionDetail {
    border-color: #e6ecf5;
    border-style: solid;
    border-radius: 5px;
    border-width: thin;
    background-color: #f8fcfc;
    display: flex;
    justify-content: space-between;
    width: 65%;
    height:2.7rem;
}

.transactionDetailPadded {
    border-color: #e6ecf5;
    border-style: solid;
    border-radius: 5px;
    border-width: thin;
    margin-top:2rem;
    background-color: #f8fcfc;
    display: flex;
    justify-content: space-between;
    width: 65%;
    height:2.7rem;
    margin-bottom: 1.5rem;
}

.transactionDescription {
    color:gray;
    padding-left: 2rem;
    margin-top: 0.5rem !important;
    margin-bottom: 0.5rem !important;
}

.transactionValue {
    padding-right:2rem;
    margin-top: 0.5rem !important;
    margin-bottom: 0.5rem !important;
}

.authTransactionHeader {
    padding-top: 3rem;
    padding-bottom: 3rem;
}

.zkAddressContainer {
    display: flex;
    justify-content: center;
}

.errorLabelContainer {
    display: flex;
    justify-content: center;
}

.ui.basic.label.errorlabel {
    color:#db2828;
    border-color: #db2828;
    background: #fadadd;
    display: flex;
    justify-content: center;
    width: 65%;
    margin:0.2rem;
}

.exclamation.circle.icon.specific {
    padding-top:0.2rem;
}

.button.ui.copy {
    background-color: #FFFFFF;
    display: flex;
    justify-content: center;
    margin: 0rem !important;
    padding: 0rem !important;
    height:1rem;
}

.subtext.copy {
    margin:0rem;
}

.ui.button:not(.icon)>.icon:not(.button):not(.dropdown).specific {
    margin:0rem;
}

.secretPhraseWarning {
    border-color: #ffece4;
    background-color:#FFFFFF;
    width: 80%;
    text-align: left;
    border-width: medium;
    border-style: solid;
}

.secretPhraseWarningText {
    padding: 1rem;
    color: #FFBC2C;
}

.secretPhraseWarningContainer {
    display: flex;
    flex-wrap:wrap;
    justify-content: center;
    padding-top: 1rem;
}

.cancelShowRecoveryButtonContainer {
    margin-bottom: -5rem;
    margin-top: -1rem;
}

.ui.button.hrefButton {
    background-color: #FFFFFF;
    color:#0894ec;
    font-weight:300;
} 

.ui.button.hrefButton:hover {
    color:gray;
    background-color: #FFFFFF;
}

.hrefButtonContainer {
    margin-top:-2rem;
}

